alpha registration updates

--- a/overrides/main.html
+++ b/overrides/main.html
@@ -2,7 +2,7 @@
 
 {% block announce %}
 <body>
-Google Analytics 4 Decoder is currently open to private alpha registration. 
-Register for access using the following <a href="https://forms.gle/Y7bs7eQn1kZ2s4j29">form</a>.
+The <b>Google Analytics 4 Decoder</b> is currently open to private alpha registration. 
+Register for access <a href="https://forms.gle/Y7bs7eQn1kZ2s4j29" target="_blank">here</a>.
 </body>
 {% endblock %}
