updated form url

--- a/overrides/main.html
+++ b/overrides/main.html
@@ -3,6 +3,6 @@
 {% block announce %}
 <body>
 The <b>Google Analytics 4 Decoder</b> is currently open to private alpha registration. 
-Register for access <a href="https://forms.gle/Y7bs7eQn1kZ2s4j29" target="_blank">here</a>.
+Register for access <a href="https://forms.gle/BSCNoB8QPgGsEHbc8" target="_blank">here</a>.
 </body>
 {% endblock %}
