embedded application form

--- a/overrides/main.html
+++ b/overrides/main.html
@@ -3,6 +3,6 @@
 {% block announce %}
 <body>
 The <b>Google Analytics 4 Decoder</b> is currently open to private alpha registration. 
-Apply for access <a style="color:white; font-weight: bold; text-decoration: underline;" href="https://docs.google.com/forms/d/e/1FAIpQLSf1LVjV2PAVxOqnQMZrg43XMRwblpHPaooGGX2eCJ1Or52qwg/viewform?usp=sf_link" target="_blank">here</a>.
+Apply for access <a style="color:white; font-weight: bold; text-decoration: underline;" href="/ga4/access" target="_blank">here</a>.
 </body>
 {% endblock %}
