added Strip pricing table

--- a/overrides/main.html
+++ b/overrides/main.html
@@ -2,7 +2,6 @@
 
 {% block announce %}
 <body>
-The <b>Google Analytics 4 Decoder</b> is currently open to private alpha registration. 
-Apply for access <a style="color:white; font-weight: bold; text-decoration: underline;" href="/ga4/access" target="_blank">here</a>.
+The <b>Google Analytics 4 Decoder</b> is now generally available. Check out the overview <a style="color:white; font-weight: bold; text-decoration: underline;" href="/ga4">here</a> and get started <a style="color:white; font-weight: bold; text-decoration: underline;" href="/ga4/quickstart">here</a>.
 </body>
 {% endblock %}
