--- a/overrides/main.html
+++ b/overrides/main.html
@@ -2,6 +2,6 @@
 
 {% block announce %}
 <body>
-The <b>Google Analytics 4 Decoder</b> is currently in preview mode. Check out the overview <a style="color:white; font-weight: bold; text-decoration: underline;" href="/ga4">here</a> and register interest <a style="color:white; font-weight: bold; text-decoration: underline;" href="https://forms.gle/qfFSthXr6d4gnD9dA">here</a>.
+The <b>Google Analytics 4 Decoder</b> is currently in preview mode. Check out the overview <a style="color:white; font-weight: bold; text-decoration: underline;" href="/ga4">here</a> and apply for access <a style="color:white; font-weight: bold; text-decoration: underline;" href="https://forms.gle/qfFSthXr6d4gnD9dA">here</a>.
 </body>
 {% endblock %}
